fixed test so Provider wraps around Header

--- a/src/components/headers/Header.css
+++ b/src/components/headers/Header.css
@@ -16,5 +16,8 @@ ul {
 }
 
 a {
+    color: teal;
+    font-size: 25px;
+    font-weight: bold;
     text-decoration: none;
 }
